# svbyte

./: Cargo.toml  README.md
.cargo/: config
benches/: decode.rs  encode.rs
examples/: simple.rs
src/: lib.rs  main.rs
