[package]
name = "svbyte"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Fast Stream VByte implementation"
homepage = "https://github.com/bazhenov/svbyte"
documentation = "https://docs.rs/svbyte/"
repository = "https://github.com/bazhenov/svbyte"
readme = "README.md"
categories = ["data-structures", "compression"]
keywords = ["database", "serialization", "networking"]

[dependencies]

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false
